--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
-  text-align: center;
+/* Main nav*/
+
+.navbar {
+  transition: margin-left 0.5s ease-in-out;
+  margin-bottom: 0;
+  margin-left: 200px;
+  border: none;
+  min-height: 50px;
+  border-radius: 0;
+  background-color: #000000 !important;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-custom {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar-nav > li {
+  list-style-type: none;
+
+}
+
+.nav-icons-right {
+  font-size: 24px;
+}
+/* Style the sidebar */
+
+.sidebar {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    background-color: #313a46 !important;
+    overflow-x: hidden;
+    padding-top: 16px;
+    transition: 0.5s;
+}
+
+/* Style sidebar links */
+.sidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #8391a2;
+    display: block;
+    font-family: sans-serif;  
   }
+  
+  /* Style links on mouse-over */
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+
+  /* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  hr {
+    margin: 0;
+    color: inherit;
+    background-color: white;
+    border: 1;
+    opacity: .25;
+}
+
+
+  .main {
+    transition: margin-left .5s;
+    padding-left: 220px;
+    overflow:hidden;
+    width:100%;
+    background-color: #fafbfe;
+
+}
+
+body {
+  overflow-x: hidden;
+  font-family: "Nunito",sans-serif;
+}
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar input {
+  background-color: #fafbfe;
+  border: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+  /* Body header*/
+  .body-header {
+    padding: 15px 15px 0;
+    padding-bottom: 20px;
+    }
+
+    .body-header > h1 {
+        font-size: 24px;
+        padding-left: 10px;
+        font-family: "Nunito",sans-serif;
+
+    }
+
+    .row > .col > input {
+      background-color: #f1f1f1;
+      border: 0px;
+    }
+
+    .card {
+      border: none;
+      box-shadow: 0 0 35px 0 rgba(154,161,171,.15);
+      margin-bottom: 24px;
+      
   }
-  to {
-    transform: rotate(360deg);
+
+    .card-body h4, h6 {
+      font-size: .9375rem;
+      color:#6c757d;
+      font-family: "Nunito",sans-serif;
+    }
+  
+    .card-body p {
+      font-size: .9375rem;
+    }
+    .bg-teal {
+        background-color: #ffffff !important;
+    }
+
+    /* Table section*/
+
+    .box-header .box-title {
+      font-size: 24px;
+    }
+    .main-table {
+      margin-top: 100px;
+      margin-bottom: 100px;
+    }
+
+    .table-responsive {
+      max-height: 300px;
+    }
+
+    .table > tbody {
+      color: #7b7b7b
+    }
+
+
+    /* Assets Element - Form */
+
+  .container {
+    padding-top: 25px;
   }
-}
+
+  .form-group > label {
+    flex-basis:100px
+  }
+  .form-container {
+    margin-left: 25%;
+    margin-right: 15%;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #f6f6f6;
+  }
+
+
+  /* Hardware */
